[tool.poetry]
name = "flamethrower"
version = "0.1.0"
description = "Python utility for processing Frostbite engine game files and interacting with the Frosty Editor."
authors = ["MaxMixAlex <MaxMixAlex@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/zyf722/flamethrower"
keywords = ["Frostbite", "entertainment", "reverse engineering", "game development"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Games/Entertainment",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.31.0.10"
nuitka = "^1.9.3"
types-python-dateutil = "^2.8.19.20240106"

[tool.poetry.group.ui.dependencies]
rich = "^13.7.0"
inquirerpy = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
